# esp-gallery

./: .gitignore  CMakeLists.txt  PNG_support.cpp  PNG_support.h  Readme.md  esp_gallery.ino  thumbnail_utils.cpp  thumbnail_utils.h
src/main/: downscale_utils.cpp  downscale_utils.h  img_holder.h  main.cpp  thumbnail_utils.h
src/main/core/: configs.h  downscale_utils.cpp  downscale_utils.h
src/main/esp32/: PNG_support.cpp  PNG_support.h  controller.cpp  controller.h  gallery.cpp  gallery.h  gallery_controller.cpp  gallery_controller.h  i_controller.h  log.h  main.cpp  main.h  main_controller.cpp  main_controller.h  msc_controller.cpp  msc_controller.h  pins_config.h  thumbnail_utils.cpp  thumbnail_utils.h
src/main/esp32/decoder/: advancable_decoder.h  clipping_draw_target.cpp  clipping_draw_target.h  decoder.cpp  decoder.h  delegating_draw_target.h  downscale_draw_target.cpp  downscale_draw_target.h  gif_decoder.cpp  gif_decoder.h  i_draw_target.h  jpg_decoder.cpp  jpg_decoder.h  overlay_draw_target.cpp  overlay_draw_target.h  png_decoder.cpp  png_decoder.h  png_downscale_decoder.cpp  png_downscale_decoder.h
src/main/esp32/image/: gif_image.cpp  gif_image.h  image.h  image_factory.cpp  image_factory.h  play_icon_overlay.h  png_image.cpp  png_image.h
src/main/esp32/my_sd/: MySD.cpp  MySD.h  sd_diskio.cpp  sd_diskio.h
src/main/esp32/renderer/: capturing_draw_target.cpp  capturing_draw_target.h  offsetting_draw_target.cpp  offsetting_draw_target.h  (+6 more)
src/test/core/: downscale_utils_test.cpp
test/: downscale_utils_test.cpp
tools/overlay-convert/: main.py
(+4 files in other folders)
